Fix about page spacing

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -350,3 +350,7 @@ body {
 .footer-container-xs {
     margin-top: 10px;
 }
+
+.about-item {
+    margin-top:20px;
+}
